# spiral

./: .gitmodules  CMakeLists.txt  README.md  setup.py
notebooks/: spiral-demo.ipynb
spiral/: CMakeLists.txt
spiral/agents/: __init__.py  default.py  utils.py
spiral/environments/: fluid.py  libmypaint.py  utils.py
spiral/environments/fluid_wrapper/: README.md  brush.cc  brush.h  egl.h  error.cc  error.h  renderer.cc  renderer.h  simulator.cc  simulator.h  utils.cc  utils.h  wrapper.cc  wrapper.h
spiral/environments/fluid_wrapper/protos/: config.proto
spiral/environments/fluid_wrapper/python/: pyfluid.cc
spiral/environments/libmypaint_wrapper/: brush.cc  brush.h  surface.cc  surface.h
spiral/environments/libmypaint_wrapper/python/: pylibmypaint.cc
